--- a/index.html
+++ b/index.html
@@ -63,15 +63,13 @@
             <p>
               I'm a backend-focused product developer currently pursuing my
               B.Tech in Mechanical Engineering at IIT Delhi, where I represent
-              the Mechanical Department. As a U.S. citizen with expertise in
-              Java, Spring Boot, REST APIs, and Generative AI, I build modular
-              backend architectures that seamlessly integrate with LLMs and
-              modern AI pipelines.
+              the Mechanical Department. I build modular backend architectures 
+              that seamlessly integrate with LLMs and modern AI pipelines.
             </p>
 
             <p>
-              Currently working at Naviga Global as a Generative AI intern, I'm
-              implementing microservices in Java 21, building REST endpoints,
+              Previously worked at Naviga Global as a Generative AI intern, I
+              implemented microservices in Java 21, building REST endpoints,
               and integrating local LLMs using Ollama for scalable content
               processing. My main project involves implementing the MCP protocol
               to convert SharePoint-hosted PDFs, Word Docs, and PPTs into
