--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio | Your Name</title>
+    <title>Aditya's Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -129,7 +129,7 @@
         <h2 class="section-title">Featured Work</h2>
         <div class="work-grid">
           <a
-            href="https://github.com/Adi-contributes/SEO-extraction-ollama"
+            href=""
             class="work-item"
             target="_blank"
             rel="noopener"
